--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint src/"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "StackNeverFlow",
+  "license": "GPL-2.0",
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
